<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">BitMPC</string>
	<string name="about_url">http://www.bitendian.com</string>
	<string name="about_url_app">http://www.bitendian.com/bitmpc</string>
	<string name="about_version">version: </string>
	<string name="about_current">1.0.0</string>
	<string name="about_author">author: </string>
	<string name="about_juanan">Juanan Guerrero</string>
	<string name="about_email">e-mail: </string>
	<string name="about_jguerrero">jguerrero@bitendian.com</string>
	<string name="about_bitendian">bITendian</string>
	<string name="connection_name">name</string>
	<string name="connection_ip">host ip</string>
	<string name="connection_port">host port</string>
	<string name="connection_auth">use password</string>
	<string name="connection_password">password</string>
	<string name="connection_password_error">Incorrect password!</string>
	<string name="connection_rss_error">Can\'t fetch rss info!</string>
	<string name="settings_vibration">vibration</string>
	<string name="settings_playonadd">play on add</string>
	<string name="settings_refresh_time">status refresh time (ms)</string>
	<string name="add">click to add</string>
	<string name="menu_hosts">Hosts</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_about">About</string>
	<string name="hostscontextmenu_edit">Edit</string>
	<string name="hostscontextmenu_delete">Delete</string>
	<string name="playlist_deleting">Deleting...</string>
	<string name="playlist_moving">Moving...</string>
	<string name="browse_back">..</string>
	<string name="browsemenu_add">Add</string>
	<string name="rssmenu_remove">Remove</string>
	<string name="playlistmenu_remove">Remove</string>
	<string name="playlistmenu_clear">Clear</string>
	<string name="playlistmenu_move">Move</string>
	<string name="hosts_connect">Connect</string>
	<string name="playlist_slide">slide</string>
	<string name="tab_playlist">Playlist</string>
	<string name="tab_browse">Browse</string>
	<string name="tab_search">Search</string>
	<string name="tab_rss">Podcast</string>
	<string name="progress_connecting">Connecting to:</string>
	<string name="progress_searching">Searching...</string>
	<string name="progress_browsing">Browsing...</string>
	<string name="progress_fetching">Fetching...</string>
	<string name="input_url">Add URL:</string>
	<string name="url_error">Bad URL format</string>
	<string name="unknown_artist">Unknown artist</string>
	<string name="no_host_error">To create a host click Menu > Hosts</string>
</resources>
