<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:visible="true" android:titleCondensed="@string/menu_hosts"
		android:title="@string/menu_hosts" android:id="@+id/menu_hosts"
		android:enabled="true" android:numericShortcut="1"
		android:alphabeticShortcut="h" android:icon="@drawable/menu_hosts" />
	<item android:visible="true" android:titleCondensed="@string/menu_settings"
		android:title="@string/menu_settings" android:id="@+id/menu_settings"
		android:enabled="true" android:numericShortcut="2"
		android:alphabeticShortcut="s" android:icon="@android:drawable/ic_menu_preferences"></item>
	<item android:visible="true" android:titleCondensed="@string/menu_about"
		android:title="@string/menu_about" android:id="@+id/menu_about"
		android:enabled="true" android:numericShortcut="3"
		android:alphabeticShortcut="a" android:icon="@drawable/menu_about"></item>
</menu>
