<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content" android:orientation="vertical"
	android:layout_width="fill_parent">
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_height="fill_parent" android:orientation="vertical"
			android:layout_width="fill_parent">
			<CheckBox android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/settings_vibration"
				android:id="@+id/settings_vibration" style="@style/label"></CheckBox>
			<CheckBox android:text="@string/settings_playonadd" android:id="@+id/settings_playonadd"
				android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
			<TextView android:layout_height="wrap_content"
				android:text="@string/settings_refresh_time" android:layout_width="wrap_content"
				style="@style/label"></TextView>
			<EditText android:layout_height="wrap_content" android:id="@+id/settings_refresh_time"
				android:layout_alignParentRight="true" android:layout_width="wrap_content"
				android:width="200px" android:gravity="right" android:inputType="numberDecimal"
				android:maxLength="5"></EditText>
			<LinearLayout android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_gravity="right">
				<Button android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@android:string/ok"
					android:width="100px" android:id="@+id/settings_button_ok"></Button>
				<Button android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@android:string/cancel"
					android:width="100px" android:id="@+id/settings_button_cancel"></Button>
			</LinearLayout>
		
</LinearLayout>
	</ScrollView>
</LinearLayout>