<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content" android:orientation="vertical"
	android:layout_width="fill_parent">
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_height="fill_parent" android:orientation="vertical"
			android:layout_width="fill_parent">
			<TextView android:layout_height="wrap_content" android:text="@string/connection_name"
				android:layout_width="wrap_content" style="@style/label"></TextView>
			<EditText android:layout_height="wrap_content" android:id="@+id/connection_name"
				android:layout_alignParentRight="true" android:layout_width="fill_parent"></EditText>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/connection_ip"
				style="@style/label"></TextView>
			<LinearLayout android:layout_height="wrap_content"
				android:orientation="horizontal" android:layout_width="wrap_content"
				android:gravity="right">
				<EditText android:layout_height="wrap_content" android:id="@+id/connection_ip0"
					android:width="50px" android:layout_width="50sp" android:digits="0123456789"
					android:maxLength="3" android:selectAllOnFocus="true"
					android:gravity="right" android:inputType="number"></EditText>
				<EditText android:layout_height="wrap_content" android:id="@+id/connection_ip1"
					android:width="50px" android:layout_width="50sp" android:digits="0123456789"
					android:maxLength="3" android:gravity="right"
					android:selectAllOnFocus="true" android:inputType="number"></EditText>
				<EditText android:layout_height="wrap_content" android:id="@+id/connection_ip2"
					android:width="50px" android:layout_width="50sp" android:digits="0123456789"
					android:maxLength="3" android:gravity="right"
					android:selectAllOnFocus="true" android:inputType="number"></EditText>
				<EditText android:layout_height="wrap_content" android:id="@+id/connection_ip3"
					android:width="50px" android:layout_width="50sp" android:digits="0123456789"
					android:maxLength="3" android:selectAllOnFocus="true"
					android:gravity="right" android:inputType="number"></EditText>
			</LinearLayout>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/connection_port"
				style="@style/label"></TextView>
			<LinearLayout android:layout_height="wrap_content"
				android:orientation="horizontal" android:layout_width="wrap_content">
				<EditText android:layout_height="wrap_content" android:id="@+id/connection_port"
					android:width="100px" android:layout_width="100sp"
					android:maxLength="5" android:digits="0123456789" android:gravity="right"></EditText>
			</LinearLayout>
			<CheckBox android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/connection_auth"
				android:id="@+id/connection_auth" style="@style/label"></CheckBox>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/connection_password"
				style="@style/label"></TextView>
			<EditText android:layout_height="wrap_content" android:id="@+id/connection_password"
				android:layout_width="200px" android:password="true"></EditText>
			<LinearLayout android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_gravity="right">
				<Button android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@android:string/ok"
					android:width="100px" android:id="@+id/connection_button_ok"></Button>
				<Button android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@android:string/cancel"
					android:width="100px" android:id="@+id/connection_button_cancel"></Button>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>